<resources>
    <string name="app_name">Math</string>
    <string name="home">首页</string>
    <string name="myself">我</string>
    <string name="talk">讨论</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="sign">注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="school_number">学号</string>
    <string name="true_name">真实姓名</string>
    <string name="sec_school">学院/系</string>
    <string name="userName_or_passWord_is_null">用户名或密码为空</string>
    <string name="click_again_exit">再按一次退出程序</string>
    <string name="notice">公告</string>
    <string name="knowledge">知识点</string>
    <string name="formula">公式</string>
    <string name="share">分享</string>
    <string name="radio_hot">热门</string>
    <string name="radio_classify">分类</string>
    <string name="ask">提问</string>
    <string name="my_ask">我的提问</string>
    <string name="my_reply">我的回答</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_download">本地下载</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="ask_list">提问列表</string>
    <string name="personal_info">个人信息</string>
    <string name="reply">回答</string>
    <string name="headImage">头像</string>
    <string name="nick_name">昵称</string>
    <string name="real_name">真实姓名</string>
    <string name="login_or_sign">注册 | 登录</string>
    <string name="major">专业</string>
    <string name="grade">班级</string>
    <string name="year">入学年份</string>
    <string name="school">学校</string>
    <string name="e_mail">E-mail</string>
    <string name="change_pwd">更改密码</string>
    <string name="exit_login">退出登陆</string>
    <string name="from">来自</string>
    <string name="download">下载</string>
    <string name="login_success">登录成功</string>
    <string name="test">测试</string>
    <string name="ask_in">提问于：</string>
    <string name="gcu">华南理工大学广州学院</string>
    <string name="logining">登录中……</string>
    <string name="signing">注册中……</string>
</resources>
