<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.gcu.math.view.ui.TopBar
        style="@style/TopBar"
        app:title="@string/sign" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_school_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/school_number"
                app:met_baseColor="@color/met_baseColor"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="12"
                app:met_minCharacters="12"
                app:met_primaryColor="@color/met_primaryColor"
                app:met_singleLineEllipsis="true"
                app:met_textColorHint="@color/met_textColorHint" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:met_baseColor="@color/met_baseColor"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="16"
                app:met_primaryColor="@color/met_primaryColor"
                app:met_singleLineEllipsis="true"
                app:met_textColorHint="@color/met_textColorHint" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_nick_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nick_name"
                app:met_baseColor="@color/met_baseColor"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/met_primaryColor"
                app:met_singleLineEllipsis="true"
                app:met_textColorHint="@color/met_textColorHint" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_real_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/true_name"
                app:met_baseColor="@color/met_baseColor"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="10"
                app:met_primaryColor="@color/met_primaryColor"
                app:met_singleLineEllipsis="true"
                app:met_textColorHint="@color/met_textColorHint" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grade"
                app:met_baseColor="@color/met_baseColor"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="16"
                app:met_primaryColor="@color/met_primaryColor"
                app:met_singleLineEllipsis="true"
                app:met_textColorHint="@color/met_textColorHint" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_major"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/major"
                app:met_baseColor="@color/met_baseColor"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="16"
                app:met_primaryColor="@color/met_primaryColor"
                app:met_singleLineEllipsis="true"
                app:met_textColorHint="@color/met_textColorHint" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_sec_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sec_school"
                app:met_baseColor="@color/met_baseColor"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="16"
                app:met_primaryColor="@color/met_primaryColor"
                app:met_singleLineEllipsis="true"
                app:met_textColorHint="@color/met_textColorHint" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_e_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                app:met_baseColor="@color/met_baseColor"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/met_primaryColor"
                app:met_singleLineEllipsis="true"
                app:met_textColorHint="@color/met_textColorHint" />

            <Button
                android:id="@+id/button_sign"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_bg"
                android:text="@string/sign"
                android:textColor="@color/button_text_color" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
