<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gcu.math.view.activity.MainActivity">


    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v4.view.ViewPager>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_color">

    </View>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_home"
            style="@style/NavigationRadio"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:checked="true"
            android:drawableTop="@drawable/home_button"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/radio_talk"
            style="@style/NavigationRadio"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/talk_button"
            android:text="@string/talk" />

        <RadioButton
            android:id="@+id/radio_myself"
            style="@style/NavigationRadio"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/myself_button"
            android:text="@string/myself" />

    </RadioGroup>

</LinearLayout>
